<resources>
    <string name="app_name">gear2</string>
    <string name="page_control">Control Panel</string>
    <string name="page_graph">Graphics</string>
    <string name="page_base">Database</string>
    <string name="pulse">Pulse</string>
    <string name="heat">Heating</string>
    <string name="heat_start">Heating start</string>
    <string name="heat_stop">Heating stop</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="temperature">Temperature</string>
    <string name="heat_btn_start">Heating start</string>
    <string name="heat_btn_stop">Heating stop</string>
    <string name="wait">Please wait...</string>
    <string name="damper_text">Damper (Open ... Close)</string>
    <string name="temp_text">Temperature limit</string>
    <string name="imitator">Temperature = %1$d Pressure = %2$d Inner temp. = %3$d</string>
    <string name="imitator_error">Imitator not found</string>
    <string name="synchro">Synchronization</string>
    <string name="synchro_repeat">Repeat</string>

    <string name="db_check_text">Write to DB</string>
    <string name="username">User</string>
    <string name="page_graph2">Pulse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base_element">BaseElement</string>

</resources>
