<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".ControlFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/control_layout_main"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:text="@string/username" />
                <EditText
                    android:id="@+id/decription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:text="test" />

                <CheckBox
                    android:id="@+id/flagDB"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:text="@string/db_check_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/pulse_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pulse"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/start"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnPause"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/stop"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/damper_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/damper_text"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/damperBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:minHeight="25dp" />

            <TextView
                android:id="@+id/imitator"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/imitator_error"
                android:textSize="20sp" />

            <Button
                android:id="@+id/heat_start"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:background="@color/blue"
                android:text="@string/heat_btn_start"
                android:textSize="20sp" />

            <Button
                android:id="@+id/heat_stop"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:background="@color/red"
                android:text="@string/heat_btn_stop"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temp_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/temp_text"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/tempBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:minHeight="25dp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>